tests/testcases/invalid/semantic/71_postfix_increment_on_rvalue.ciel
// Error: postfix increment requires lvalue operand
int main() {
    int a = 5;

    // Error: (a++) returns rvalue, cannot increment again
    (a++)++;

    return 0;
}
